6658428: C2 doesn't inline java method if corresponding intrinsic failed to inline

Allow fallback to non-intrinsic inline case

Reviewed-by: kvn, jrose, never